--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "data-step-io",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +12,26 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/recoil": "0.0.1",
+    "apexcharts": "^3.23.1",
+    "csv-parse": "^4.15.0",
+    "debug": "^4.3.1",
+    "functional-promises": "^2.0.2",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.isdate": "^4.0.1",
+    "lodash.isnumber": "^3.0.3",
+    "lodash.snakecase": "^4.1.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-hook-form": "^6.14.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "react-syntax-highlighter": "^15.4.3",
+    "recoil": "^0.1.2",
+    "schema-analyzer": "../schema-detector",
+    "serve": "^11.3.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
