--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "data-step-io",
   "version": "0.1.0",
   "private": false,
+  "engines": {
+    "node": "< 14"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -21,7 +24,7 @@
     "lodash.isdate": "^4.0.1",
     "lodash.isnumber": "^3.0.3",
     "lodash.snakecase": "^4.1.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
@@ -58,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/lodash.snakecase": "^4.1.6"
   }
 }
