--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-scripts": "^4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "recoil": "^0.1.2",
-    "schema-analyzer": "../schema-detector",
     "serve": "^11.3.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -67,7 +66,14 @@
     "@types/debug": "^4.1.5",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.snakecase": "^4.1.6",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "2.2.1"
   },
   "jest": {
     "transformIgnorePatterns": []
