--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -29,10 +30,12 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "recoil": "^0.1.2",
+    "redux": "^4.0.5",
     "serve": "^11.3.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -66,6 +69,7 @@
     "@types/debug": "^4.1.5",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.snakecase": "^4.1.6",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-syntax-highlighter": "^13.5.0",
     "eslint-config-prettier": "^7.2.0",
