--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "suppressImplicitAnyIndexErrors": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.js",
+    "src/**/*.jsx"
   ]
 }
