--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash.isdate": "^4.0.1",
     "lodash.isnumber": "^3.0.3",
     "lodash.snakecase": "^4.1.1",
+    "marked": "^2.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
@@ -86,5 +87,12 @@
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true
+  },
+  "eslint": {
+    "rules": {
+      "@typescript-eslint/no-redeclare": [
+        "off"
+      ]
+    }
   }
 }
