--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/recoil": "0.0.1",
     "apexcharts": "^3.23.1",
+    "comlink": "^4.3.0",
     "csv-parse": "^4.15.0",
     "debug": "^4.3.1",
     "functional-promises": "^2.0.2",
+    "handlebars": "^4.7.6",
     "lodash.camelcase": "^4.3.0",
     "lodash.isdate": "^4.0.1",
     "lodash.isnumber": "^3.0.3",
@@ -31,19 +33,21 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
+    "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "redux": "^4.0.5",
+    "remark-gfm": "^1.0.0",
     "serve": "^11.3.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "npx prettier -w \"{app,src,__{tests,mocks}__}/**/*.{ts,js}\""
   },
@@ -69,6 +73,7 @@
     "@types/debug": "^4.1.5",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.snakecase": "^4.1.6",
+    "@types/marked": "^1.2.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-syntax-highlighter": "^13.5.0",
@@ -77,7 +82,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "react-app-rewire-alias": "^0.2.1",
+    "react-app-rewired": "^2.1.8"
   },
   "jest": {
     "transformIgnorePatterns": []
