fixing awkward UI flow, added Suspense & React.lazy

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "transformIgnorePatterns": []
   },
   "prettier": {
+    "printWidth": 100,
     "trailingComma": "all",
     "tabWidth": 2,
     "semi": true,
