--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash.snakecase": "^4.1.1",
     "marked": "^2.0.0",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
