--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,17 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "isolatedModules": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "sourceMap": true,
+    "noImplicitAny": false,
+    "importHelpers": true
   },
   "include": [
     "src/**/*.ts",
