--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data-step-io",
+  "name": "data-analyzer-app",
   "version": "1.1.0",
   "private": false,
   "homepage": "https://dataanalyzer.app",
