--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "csv-parse": "^4.15.0",
     "debug": "^4.3.1",
     "functional-promises": "^2.0.2",
+    "github-markdown-css": "^4.0.0",
     "handlebars": "^4.7.6",
     "lodash.camelcase": "^4.3.0",
     "lodash.isdate": "^4.0.1",
