fixing image URLs for social sharing

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "PUBLIC_URL=https://dataanalyzer.app react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "npx prettier -w \"{app,src,__{tests,mocks}__}/**/*.{ts,js}\"",
