nested structures all flattened

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "build": "PUBLIC_URL=https://dataanalyzer.app react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "lint": "npx prettier -w \"{app,src,__{tests,mocks}__}/**/*.{ts,js}\"",
+    "lint": "npx prettier -w \"{app,src,__{tests,mocks}__}/**/*.{ts,tsx,js,jsx}\"",
     "postinstall": "cd src/schema-analyzer && npm install"
   },
   "eslintConfig": {
