--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "functional-promises": "^2.0.2",
     "github-markdown-css": "^4.0.0",
     "handlebars": "^4.7.6",
+    "lodash": "^4.17.20",
     "lodash.camelcase": "^4.3.0",
     "lodash.isdate": "^4.0.1",
     "lodash.isnumber": "^3.0.3",
