--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/recoil": "0.0.1",
+    "ace-builds": "^1.4.12",
     "apexcharts": "^3.23.1",
     "clipboard-copy": "^4.0.1",
     "comlink": "^4.3.0",
@@ -39,11 +40,13 @@
     "node-sass": "^4.14.1",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
+    "react-ace": "^9.3.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
     "react-markdown": "^5.0.3",
     "react-redux": "^7.2.2",
+    "react-resize-detector": "^6.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-syntax-highlighter": "^15.4.3",
