--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/recoil": "0.0.1",
     "ace-builds": "^1.4.12",
     "apexcharts": "^3.23.1",
+    "bootstrap": "^4.6.0",
     "clipboard-copy": "^4.0.1",
     "comlink": "^4.3.0",
     "csv-parse": "^4.15.0",
