--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-analyzer",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "private": false,
   "homepage": "https://dataanalyzer.app",
   "repository": {
@@ -24,6 +24,7 @@
     "@types/recoil": "0.0.1",
     "ace-builds": "^1.4.12",
     "apexcharts": "^3.23.1",
+    "bootstrap": "^4.6.0",
     "clipboard-copy": "^4.0.1",
     "comlink": "^4.3.0",
     "csv-parse": "^4.15.0",
@@ -115,7 +116,9 @@
     "eslint-plugin-react": "^7.22.0",
     "prettier": "2.2.1",
     "react-app-rewire-alias": "^0.2.1",
+    "react-app-rewire-scss-loaders": "^0.1.2",
     "react-app-rewired": "^2.1.8",
+    "sass-resources-loader": "^2.1.1",
     "ts-jest": "^26.5.1"
   },
   "jest": {
