--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "data-analyzer",
   "version": "1.5.0",
   "private": false,
-  "homepage": "https://dataanalyzer.app",
+  "homepage": "/",
   "repository": {
     "type": "git",
     "url": "https://github.com/justsml/DataAnalyzer.app"
@@ -60,7 +60,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "PUBLIC_URL=https://dataanalyzer.app react-app-rewired build",
+    "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "npx prettier -w \"{app,src,__{tests,mocks}__}/**/*.{ts,tsx,js,jsx}\"",
@@ -134,7 +134,7 @@
       "^@utils/(.*)$": "<rootDir>/src/schema-analyzer/utils/$1"
     },
     "transformIgnorePatterns": [
-      "node_modules/"
+      "node_modules/(?!react-syntax-highlighter|jsdom)"
     ],
     "globals": {
       "ts-jest": {
