WIP: fixing names, adding Worker bg processing

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,9 @@
     },
     {
       "source": "/images/(.*).js",
-      "headers": [{ "key": "Content-Type", "value": "application/javascript; charset=utf-8" }]
+      "headers": [
+        { "key": "Content-Type", "value": "application/javascript; charset=utf-8" }
+      ]
     },
     {
       "source": "/images/(.*).csv",
@@ -47,6 +49,14 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Cross-Origin-Embedder-Policy",
+          "value": "require-corp"
+        },
+        {
+          "key": "Cross-Origin-Opener-Policy",
+          "value": "same-origin"
         }
       ]
     }
