--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "remark-gfm": "^1.0.0",
     "serve": "^11.3.2",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
