--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "src",
     "target": "ES2019",
     "lib": [
+      "WebWorker",
       "dom",
       "dom.iterable",
       "es2019",
