--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Data Analyzer",
+  "name": "DataAnalyzer.app - Data to Code Generator",
   "icons": [
     {
       "src": "favicon.ico",
@@ -15,11 +15,12 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#1a237e",
   "background_color": "#ffffff"
 }
