--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Data Analyzer",
   "name": "DataAnalyzer.app - Data to Code Generator",
+  "description": "Convert any JSON (or CSV) data into code for TypeScript, GoLang, MongoDB, Postgres, and more!",
   "icons": [
     {
       "src": "favicon.ico",
@@ -19,7 +20,8 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#1a237e",
   "background_color": "#ffffff"
