--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "max-age=86400, stale-while-revalidate=31536000"
+          "value": "max-age=2678400, stale-while-revalidate=31536000"
         }
       ]
     },
@@ -31,7 +31,7 @@
         { "key": "Content-Type", "value": "application/javascript; charset=utf-8" },
         {
           "key": "Cache-Control",
-          "value": "max-age=86400, stale-while-revalidate=31536000"
+          "value": "max-age=2678400, stale-while-revalidate=31536000"
         }
       ]
     },
@@ -41,7 +41,7 @@
         { "key": "Content-Type", "value": "application/javascript; charset=utf-8" },
         {
           "key": "Cache-Control",
-          "value": "max-age=86400, stale-while-revalidate=31536000"
+          "value": "max-age=2678400, stale-while-revalidate=31536000"
         }
       ]
     },
@@ -54,7 +54,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "max-age=86400, stale-while-revalidate=31536000"
+          "value": "max-age=2678400, stale-while-revalidate=31536000"
         },
         {
           "key": "X-Content-Type-Options",
