--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "preset": "ts-jest/presets/js-with-babel",
     "verbose": true,
     "moduleNameMapper": {
-      "^images/(.*)$": "<rootDir>/public/images/$1",
-      "^data/(.*)$": "<rootDir>/public/data/$1",
-      "^@src/(.*)$": "<rootDir>/src/$1",
-      "^@components/(.*)$": "<rootDir>/src/components/$1",
-      "^@utils/(.*)$": "<rootDir>/src/schema-analyzer/utils/$1"
+      "images/(.*)$": "<rootDir>/public/images/$1",
+      "data/(.*)$": "<rootDir>/public/data/$1",
+      "@src/(.*)$": "<rootDir>/src/$1",
+      "@components/(.*)$": "<rootDir>/src/components/$1",
+      "@utils/(.*)$": "<rootDir>/src/schema-analyzer/utils/$1"
     },
     "transformIgnorePatterns": [
       "node_modules/(?!react-syntax-highlighter|jsdom)"
@@ -90,73 +90,74 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@reduxjs/toolkit": "1.5.0",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "@types/jest": "26.0.15",
+    "@types/node": "12.0.0",
+    "@types/react": "16.9.53",
+    "@types/react-dom": "16.9.8",
     "@types/recoil": "0.0.1",
-    "ace-builds": "^1.4.12",
-    "apexcharts": "^3.23.1",
-    "bootstrap": "^4.6.0",
-    "clipboard-copy": "^4.0.1",
-    "comlink": "^4.3.0",
-    "common-substrings": "^3.0.1",
-    "csv-parse": "^4.15.0",
-    "debug": "^4.3.1",
-    "functional-promises": "^2.0.2",
-    "github-markdown-css": "^4.0.0",
-    "handlebars": "^4.7.6",
-    "lodash": "^4.17.20",
-    "lodash.camelcase": "^4.3.0",
-    "lodash.isdate": "^4.0.1",
-    "lodash.isnumber": "^3.0.3",
-    "lodash.snakecase": "^4.1.1",
-    "marked": "^2.0.0",
-    "node-sass": "^4.14.1",
-    "notistack": "^1.0.3",
-    "react": "^17.0.1",
-    "react-ace": "^9.3.0",
-    "react-apexcharts": "^1.3.7",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^6.14.2",
-    "react-markdown": "^5.0.3",
-    "react-redux": "^7.2.2",
-    "react-resize-detector": "^6.6.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "react-syntax-highlighter": "^15.4.3",
-    "redux": "^4.0.5",
-    "remark-gfm": "^1.0.0",
-    "serve": "^11.3.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "ace-builds": "1.4.12",
+    "apexcharts": "3.23.1",
+    "bootstrap": "4.6.0",
+    "clipboard-copy": "4.0.1",
+    "comlink": "4.3.0",
+    "common-substrings": "3.0.1",
+    "csv-parse": "4.15.0",
+    "debug": "4.3.1",
+    "functional-promises": "2.0.2",
+    "github-markdown-css": "4.0.0",
+    "handlebars": "4.7.6",
+    "lodash": "4.17.20",
+    "lodash.camelcase": "4.3.0",
+    "lodash.isdate": "4.0.1",
+    "lodash.isnumber": "3.0.3",
+    "lodash.snakecase": "4.1.1",
+    "marked": "2.0.0",
+    "node-sass": "4.14.1",
+    "notistack": "1.0.3",
+    "react": "17.0.1",
+    "react-ace": "9.3.0",
+    "react-apexcharts": "1.3.7",
+    "react-dom": "17.0.1",
+    "react-hook-form": "6.14.2",
+    "react-markdown": "5.0.3",
+    "react-redux": "7.2.2",
+    "react-resize-detector": "6.6.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.1",
+    "react-syntax-highlighter": "15.4.3",
+    "redux": "4.0.5",
+    "remark-gfm": "1.0.0",
+    "serve": "11.3.2",
+    "typescript": "4.1.3",
+    "web-vitals": "0.2.4"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/lodash.camelcase": "^4.3.6",
-    "@types/lodash.snakecase": "^4.1.6",
-    "@types/marked": "^1.2.2",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
+    "@types/debug": "4.1.5",
+    "@types/lodash.camelcase": "4.3.6",
+    "@types/lodash.snakecase": "4.1.6",
+    "@types/marked": "1.2.2",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router-dom": "5.1.7",
+    "@types/react-syntax-highlighter": "13.5.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.22.0",
     "prettier": "2.2.1",
-    "react-app-rewire-alias": "^0.2.1",
-    "react-app-rewire-scss-loaders": "^0.1.2",
-    "react-app-rewire-webpack-bundle-analyzer": "^1.1.0",
-    "react-app-rewired": "^2.1.8",
-    "sass-resources-loader": "^2.1.1",
-    "ts-jest": "^26.5.1",
-    "webpack-cli": "^4.5.0"
+    "react-app-rewire-alias": "0.2.1",
+    "react-app-rewire-scss-loaders": "0.1.2",
+    "react-app-rewire-webpack-bundle-analyzer": "1.1.0",
+    "react-app-rewired": "2.1.8",
+    "sass-resources-loader": "2.1.1",
+    "ts-jest": "26.5.1",
+    "webpack-cli": "4.5.0",
+    "worker-loader": "^3.0.8"
   }
 }
