--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "data-analyzer",
   "description": "Generate data-smart code using any JSON/CSV!",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "private": false,
   "homepage": "/",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/justsml/DataAnalyzer.app"
