--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "DataAnalyzer App",
-  "name": "Generate data-smart code using any JSON/CSV!",
+  "short_name": "Data Analyzer",
+  "name": "DataAnalyzer.app - Data to Code Generator",
+  "description": "Convert any JSON (or CSV) data into code for TypeScript, GoLang, MongoDB, Postgres, and more!",
   "icons": [
     {
       "src": "favicon.ico",
@@ -15,10 +16,12 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#1a237e",
   "background_color": "#ffffff"
