--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "baseUrl": "src",
     "target": "ES2019",
     "lib": [
-      "ESNext.BigInt",
-      "es2019",
+      "WebWorker",
       "dom",
       "dom.iterable",
+      "es2019",
+      "ESNext.BigInt",
       "esnext"
     ],
     "downlevelIteration": true,
