--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "data-analyzer",
   "description": "Generate data-smart code using any JSON/CSV!",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "private": false,
   "homepage": "/",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "node": "< 14"
   },
   "scripts": {
+    "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -157,6 +158,7 @@
     "react-app-rewire-webpack-bundle-analyzer": "1.1.0",
     "react-app-rewired": "2.1.8",
     "sass-resources-loader": "2.1.1",
+    "source-map-explorer": "^2.5.2",
     "ts-jest": "26.5.1",
     "webpack-cli": "4.5.0",
     "worker-loader": "3.0.8"
