--- a/package.json
+++ b/package.json
@@ -105,6 +105,8 @@
     "@types/react-dom": "16.9.8",
     "@types/recoil": "0.0.1",
     "ace-builds": "1.4.12",
+    "ag-grid-community": "^26.0.0",
+    "ag-grid-react": "^26.0.0",
     "apexcharts": "3.23.1",
     "bootstrap": "4.6.0",
     "clipboard-copy": "4.0.1",
