--- a/package.json
+++ b/package.json
@@ -101,12 +101,10 @@
     "@testing-library/user-event": "12.1.10",
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
-    "@types/react": "16.9.53",
+    "@types/react": "^17.0.26",
     "@types/react-dom": "16.9.8",
     "@types/recoil": "0.0.1",
     "ace-builds": "1.4.12",
-    "ag-grid-community": "^26.0.0",
-    "ag-grid-react": "^26.0.0",
     "apexcharts": "3.23.1",
     "bootstrap": "4.6.0",
     "clipboard-copy": "4.0.1",
@@ -125,6 +123,7 @@
     "marked": "2.0.0",
     "node-sass": "4.14.1",
     "notistack": "1.0.3",
+    "primereact": "^6.6.0",
     "react": "17.0.1",
     "react-ace": "9.3.0",
     "react-apexcharts": "1.3.7",
